--- a/src/Dyoub.Test/Dyoub.Test.csproj
+++ b/src/Dyoub.Test/Dyoub.Test.csproj
@@ -182,6 +182,13 @@
     <Compile Include="Contexts\Financial\Wallets\FindWalletContext.cs" />
     <Compile Include="Contexts\Financial\Wallets\ListWalletsContext.cs" />
     <Compile Include="Contexts\Financial\Wallets\UpdateWalletContext.cs" />
+    <Compile Include="Contexts\Inventory\PurchaseOrders\CreatePurchaseOrderContext.cs" />
+    <Compile Include="Contexts\Inventory\PurchaseOrders\DeleteConfirmedPurchaseOrderContext.cs" />
+    <Compile Include="Contexts\Inventory\PurchaseOrders\DeletePurchaseOrderContext.cs" />
+    <Compile Include="Contexts\Inventory\PurchaseOrders\FindPurchaseOrderContext.cs" />
+    <Compile Include="Contexts\Inventory\PurchaseOrders\ListPurchaseOrderContext.cs" />
+    <Compile Include="Contexts\Inventory\PurchaseOrders\UpdateConfirmedPurchaseOrderContext.cs" />
+    <Compile Include="Contexts\Inventory\PurchaseOrders\UpdatePurchaseOrderContext.cs" />
     <Compile Include="Contexts\Inventory\Suppliers\CreateSupplierContext.cs" />
     <Compile Include="Contexts\Inventory\Suppliers\DeleteSupplierContext.cs" />
     <Compile Include="Contexts\Inventory\Suppliers\FindSupplierContext.cs" />
@@ -216,6 +223,7 @@
     <Compile Include="Controllers\Financial\OtherCashActivitiesControllerTest.cs" />
     <Compile Include="Controllers\Financial\SaleOrderBillingControllerTest.cs" />
     <Compile Include="Controllers\Financial\WalletsControllerTest.cs" />
+    <Compile Include="Controllers\Inventory\PurchaseOrdersControllerTest.cs" />
     <Compile Include="Controllers\Inventory\SuppliersControllerTest.cs" />
     <Compile Include="Controllers\Manage\StoresControllerTest.cs" />
     <Compile Include="Controllers\Commercial\CustomersControllerTest.cs" />
@@ -234,6 +242,7 @@
     <Compile Include="Factories\Financial\OtherCashActivityFactory.cs" />
     <Compile Include="Factories\Financial\SaleIncomeFactory.cs" />
     <Compile Include="Factories\Financial\WalletFactory.cs" />
+    <Compile Include="Factories\Inventory\PurchaseOrderFactory.cs" />
     <Compile Include="Factories\Inventory\SupplierFactory.cs" />
     <Compile Include="Factories\Manage\StoreFactory.cs" />
     <Compile Include="Factories\Manage\TeamFactory.cs" />
