--- a/src/Dyoub.App/Dyoub.App.csproj
+++ b/src/Dyoub.App/Dyoub.App.csproj
@@ -183,6 +183,9 @@
     <EmbeddedResource Include="Data\Migrations\201705081751032_CreatePurchasedProduct.resx">
       <DependentUpon>201705081751032_CreatePurchasedProduct.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Data\Migrations\201705111339025_CreatePurchasePayment.resx">
+      <DependentUpon>201705111339025_CreatePurchasePayment.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Infrastructure\Mail\LocalMail.html" />
     <EmbeddedResource Include="Infrastructure\Logging\LocalLog.html" />
     <Content Include="Scripts\controllers\account\dashboard\account-overview.controller.js" />
@@ -231,6 +234,8 @@
     <Content Include="Scripts\controllers\inventory\purchase-orders\purchase-order-details.controller.js" />
     <Content Include="Scripts\controllers\inventory\purchase-orders\purchase-order-edit.controller.js" />
     <Content Include="Scripts\controllers\inventory\purchase-orders\purchase-order-list.controller.js" />
+    <Content Include="Scripts\controllers\inventory\purchase-payments\purchase-payments-details.controller.js" />
+    <Content Include="Scripts\controllers\inventory\purchase-payments\purchase-payments-edit.controller.js" />
     <Content Include="Scripts\controllers\inventory\purchase-supplier\purchase-supplier-details.controller.js" />
     <Content Include="Scripts\controllers\inventory\purchase-supplier\purchase-supplier-edit.controller.js" />
     <Content Include="Scripts\controllers\inventory\purchased-products\purchased-products-details.controller.js" />
@@ -266,6 +271,7 @@
     <Content Include="Scripts\services\financial\other-cash-activites.service.js" />
     <Content Include="Scripts\services\financial\wallet.service.js" />
     <Content Include="Scripts\services\inventory\purchase-orders.service.js" />
+    <Content Include="Scripts\services\inventory\purchase-payments.service.js" />
     <Content Include="Scripts\services\inventory\purchase-supplier.service.js" />
     <Content Include="Scripts\services\inventory\purchased-products.service.js" />
     <Content Include="Scripts\services\inventory\supplier.service.js" />
@@ -296,6 +302,7 @@
     <Compile Include="Controllers\Financial\WalletsController.cs" />
     <Compile Include="Controllers\Inventory\PurchasedProductsController.cs" />
     <Compile Include="Controllers\Inventory\PurchaseOrdersController.cs" />
+    <Compile Include="Controllers\Inventory\PurchasePaymentsController.cs" />
     <Compile Include="Controllers\Inventory\PurchaseSupplierController.cs" />
     <Compile Include="Controllers\Inventory\SuppliersController.cs" />
     <Compile Include="Controllers\Manage\StoresController.cs" />
@@ -395,6 +402,10 @@
     <Compile Include="Data\Migrations\201705081751032_CreatePurchasedProduct.Designer.cs">
       <DependentUpon>201705081751032_CreatePurchasedProduct.cs</DependentUpon>
     </Compile>
+    <Compile Include="Data\Migrations\201705111339025_CreatePurchasePayment.cs" />
+    <Compile Include="Data\Migrations\201705111339025_CreatePurchasePayment.Designer.cs">
+      <DependentUpon>201705111339025_CreatePurchasePayment.cs</DependentUpon>
+    </Compile>
     <Compile Include="Extensions\ControllerExtensions.cs" />
     <Compile Include="Extensions\EnumarableExtensions.cs" />
     <Compile Include="Extensions\HttpContextBaseExtension.cs" />
@@ -483,6 +494,9 @@
     <Compile Include="Models\EntityModel\Inventory\PurchaseOrders\PurchaseOrder.cs" />
     <Compile Include="Models\EntityModel\Inventory\PurchaseOrders\PurchaseOrderMapping.cs" />
     <Compile Include="Models\EntityModel\Inventory\PurchaseOrders\PurchaseOrderQuery.cs" />
+    <Compile Include="Models\EntityModel\Inventory\PurchasePayments\PurchasePayment.cs" />
+    <Compile Include="Models\EntityModel\Inventory\PurchasePayments\PurchasePaymentMapping.cs" />
+    <Compile Include="Models\EntityModel\Inventory\PurchasePayments\PurchasePaymentQuery.cs" />
     <Compile Include="Models\EntityModel\Inventory\Suppliers\Supplier.cs" />
     <Compile Include="Models\EntityModel\Inventory\Suppliers\SupplierMapping.cs" />
     <Compile Include="Models\EntityModel\Inventory\Suppliers\SupplierQuery.cs" />
@@ -519,12 +533,13 @@
     <Compile Include="Infrastructure\Security\Sha256Hash.cs" />
     <Compile Include="Infrastructure\Security\UserIdentity.cs" />
     <Compile Include="Models\ServiceModel\Catalog\PricingTable.cs" />
-    <Compile Include="Models\ServiceModel\Commercial\CashRegister.cs" />
+    <Compile Include="Models\ServiceModel\Commercial\SalePromisedPayments.cs" />
     <Compile Include="Models\ServiceModel\Commercial\SaleShoppingCart.cs" />
     <Compile Include="Models\ServiceModel\Financial\Billing.cs" />
     <Compile Include="Models\ServiceModel\Financial\CashFlowAnalysis.cs" />
     <Compile Include="Models\ServiceModel\Financial\PurchaseCost.cs" />
     <Compile Include="Models\ServiceModel\Inventory\ProductConsumption.cs" />
+    <Compile Include="Models\ServiceModel\Inventory\PurchasePromisedPayments.cs" />
     <Compile Include="Models\ServiceModel\Inventory\PurchaseShoppingCart.cs" />
     <Compile Include="Models\ServiceModel\Inventory\ProductReplenishment.cs" />
     <Compile Include="Models\ViewModel\Account\PasswordRecoveries\CreatePasswordRecoveryViewModel.cs" />
@@ -582,6 +597,8 @@
     <Compile Include="Models\ViewModel\Inventory\PurchaseOrders\ListPurchaseOrdersViewModel.cs" />
     <Compile Include="Models\ViewModel\Inventory\PurchaseOrders\PurchaseOrderIdViewModel.cs" />
     <Compile Include="Models\ViewModel\Inventory\PurchaseOrders\UpdatePurchaseOrderViewModel.cs" />
+    <Compile Include="Models\ViewModel\Inventory\PurchasePayments\PurchasePaymentViewModel.cs" />
+    <Compile Include="Models\ViewModel\Inventory\PurchasePayments\UpdatePurchasePaymentsViewModel.cs" />
     <Compile Include="Models\ViewModel\Inventory\PurchaseSupplier\PurchaseSupplierViewModel.cs" />
     <Compile Include="Models\ViewModel\Inventory\Suppliers\CreateSupplierViewModel.cs" />
     <Compile Include="Models\ViewModel\Inventory\Suppliers\ListSuppliersViewModel.cs" />
@@ -638,6 +655,7 @@
     <Compile Include="Results\Inventory\PurchaseOrders\PurchaseOrderIdJson.cs" />
     <Compile Include="Results\Inventory\PurchaseOrders\PurchaseOrderJson.cs" />
     <Compile Include="Results\Inventory\PurchaseOrders\PurchaseOrderListJson.cs" />
+    <Compile Include="Results\Inventory\PurchasePayments\PurchasePaymentListJson.cs" />
     <Compile Include="Results\Inventory\PurchaseSupplier\PurchaseSupplierJson.cs" />
     <Compile Include="Results\Inventory\Suppliers\SupplierJson.cs" />
     <Compile Include="Results\Inventory\Suppliers\SupplierListJson.cs" />
@@ -743,6 +761,9 @@
     <Content Include="Views\Inventory\PurchasedProducts\_RemoveProduct.cshtml" />
     <Content Include="Views\Inventory\PurchasedProducts\PurchasedProductsDetails.cshtml" />
     <Content Include="Views\Inventory\PurchasedProducts\PurchasedProductsEdit.cshtml" />
+    <Content Include="Views\Inventory\PurchasePayments\_RemovePayment.cshtml" />
+    <Content Include="Views\Inventory\PurchasePayments\PurchasePaymentsDetails.cshtml" />
+    <Content Include="Views\Inventory\PurchasePayments\PurchasePaymentsEdit.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
